Fixed navigation z-index, again ;)

--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 0;
+  z-index: 1;
   text-align: center;
   transition: all .10s ease;
   background: rgba(0, 0, 0, 0.7);
